hphp/hack/test/typecheck/akempty/akempty_promotion_7.php.exp
File "akempty_promotion_7.php", line 12, characters 5-6:
Invalid argument (Typing[4110])
File "akempty_promotion_7.php", line 15, characters 12-14:
Expected int
File "akempty_promotion_7.php", line 9, characters 7-10:
But got varray<string> because a value is appended to it
