hphp/hack/test/typecheck/akempty/akempty_promotion_7.php
<?hh

/**
 * Test AKempty promotion if assignment happens inside an expression, not on
 * statement level.
 */
function test(): void {
  $a = vec[];
  if ($a[] = 'aaa') {

  }
  f($a);
}

function f(int $_): void {}
